fix: not allow daynames to overflow in calendar

--- a/frontend/src/Calendar.css
+++ b/frontend/src/Calendar.css
@@ -27,6 +27,9 @@ table {
 
 .calendar {
     padding-top: 20px;
+    width: 80vw;
+    margin: auto;
+    display: table-cell;
 }
 
 .week {
@@ -43,15 +46,38 @@ table {
     background-color: rgb(246, 244, 241);
 }
 
+.days-of-week {
+    /* display: grid;
+    grid-template-columns: repeat(7, 1fr);
+    grid-auto-flow: dense;
+    grid-gap: 2px 10px;
+    width: 100%; */
+    display: grid;
+    grid-template-columns: repeat(7, 1fr);
+    grid-auto-flow: dense;
+    grid-gap: 2px 10px;
+    width: 100%;
+}
+
 .day-of-week {
-    width: 11.4vw;
-    grid-row: none;
+    /* width: 11.4vw;
+    grid-row: none; */
+    display: inline-grid;
+    /* display: contents;
+    min-height: 20vh;
+    max-height: fit-content; */
 }
 
-.dayNames {
-    display: flex;
-
+@media (min-width: 636px) {
+    .dayNames {
+        display: contents;
+        max-height: fit-content;
+        /* display: inline-grid;
+        max-width: 11.4vw;
+        grid-row: none; */
+    }
 }
+
 
 .starting {
     border-top-left-radius: 10px;
